# achiet

./: .gitignore  Cargo.toml  LICENSE  README.md  schema.hcl
dev/: cmd.sh  docker-compose.yml
src/: lib.rs
src/api/: bookmark.rs  metatag.rs  mod.rs  router.rs  state.rs  tag.rs  user.rs
src/app/: mod.rs  state.rs  util.rs
src/database/: db.rs  mod.rs  query.rs  sqlite.rs  value.rs
src/hash/: argon2.rs
src/model/: bookmark.rs  mod.rs  resource.rs  tag.rs  user.rs
src/repo/: tag.rs
src/taskqueue/: dispatcher.rs  mod.rs  task.rs  worker.rs
