[package]
name = "achiet"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.2"
axum = { version = "0.7.3", features = ["query"] }
chrono = { version = "0.4.31", features = ["serde"] }
jsonwebtoken = "9.2.0"
serde = "1.0.194"
serde_json = "1.0.111"
sqlx = { version = "0.7.3", features = ["sqlite", "chrono", "runtime-tokio"] }
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
trait-variant = "0.1.2"
ulid = "1.1.0"
validator = { version = "0.16.1", features = ["derive"] }
